test/golden96/{numberCLX}.4609648040604121432.golden
INITIALPATH:7:22: error: [GHC-39999]
    • No instance for ‘Integral Float’ arising from a use of ‘formatAnyIntegral’
    • In the first argument of ‘putStrLn’, namely ‘(formatAnyIntegral (Upper Hexa) Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing number)’
      In the expression: putStrLn (formatAnyIntegral (Upper Hexa) Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing number)
      In an equation for ‘main’: main = putStrLn (formatAnyIntegral (Upper Hexa) Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing number)
  |
7 | main = putStrLn [fmt|{number:X}|]
  |                      ^^^^^^^^^^^^